CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF (ParaView_SOURCE_DIR)
  INCLUDE_DIRECTORIES(
    ${VTK_INCLUDE_DIRS}
  )
ELSE (ParaView_SOURCE_DIR)
  FIND_PACKAGE(ParaView REQUIRED)
  INCLUDE(${PARAVIEW_USE_FILE})
ENDIF (ParaView_SOURCE_DIR)

FIND_PACKAGE(CUDA REQUIRED)
INCLUDE_DIRECTORIES(${CUDA_SDK_ROOT_DIR}/common/inc)
INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../VofTopo/)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../VofTopo/build)

ADD_PARAVIEW_PLUGIN(vtkVofAdvect "1.0"
  SERVER_MANAGER_XML VofAdvect.xml
  SERVER_MANAGER_SOURCES vtkVofAdvect.cxx
)

