cmake_minimum_required(VERSION 2.8)

IF (ParaView_SOURCE_DIR)
  INCLUDE_DIRECTORIES(${VTK_INCLUDE_DIRS})
ELSE (ParaView_SOURCE_DIR)
  FIND_PACKAGE(ParaView REQUIRED)
  INCLUDE(${PARAVIEW_USE_FILE})
ENDIF (ParaView_SOURCE_DIR)

FIND_PACKAGE(CUDA REQUIRED)
INCLUDE_DIRECTORIES(${CUDA_SDK_ROOT_DIR}/common/inc)
INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})

ADD_PARAVIEW_PLUGIN(vtkVofComponents "1.0"
  SERVER_MANAGER_XML VofComponents.xml
  SERVER_MANAGER_SOURCES vtkVofComponents.cxx
)
