CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

IF (ParaView_SOURCE_DIR)
  INCLUDE_DIRECTORIES(
    ${VTK_INCLUDE_DIRS}
  )
ELSE (ParaView_SOURCE_DIR)
  FIND_PACKAGE(ParaView REQUIRED)
  INCLUDE(${PARAVIEW_USE_FILE})
ENDIF (ParaView_SOURCE_DIR)

ADD_PARAVIEW_PLUGIN(VofTopo "1.0"
  SERVER_MANAGER_XML VofTopo.xml
  SERVER_MANAGER_SOURCES vtkVofTopo.cxx)
